# foldlock

./: .gitattributes  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: armor.rs  codec.rs  crypto.rs  lib.rs  main.rs  volume.rs
tests/: integration.rs
